[gd_scene load_steps=30 format=3 uid="uid://0qutpmchax1b"]

[ext_resource type="PackedScene" uid="uid://drwrxl4akk264" path="res://Templates/Enemy_Template/Enemy_Template.tscn" id="1_s8poh"]
[ext_resource type="Script" path="res://scenes/Enemies/Fly Enemy/fly.gd" id="2_4o5g4"]
[ext_resource type="Shader" uid="uid://c4tc51uu3uhpc" path="res://shader/Enemy/Fly/Fly_enemy.tres" id="2_xbdqg"]
[ext_resource type="Texture2D" uid="uid://bfaxjrj224q1u" path="res://assets/enemy/fly/dead/1.png" id="3_6ve7p"]
[ext_resource type="Texture2D" uid="uid://cmuuxaxo33ple" path="res://assets/enemy/fly/dead/2.png" id="4_y6ta0"]
[ext_resource type="Texture2D" uid="uid://c2agt5gh7x1p7" path="res://assets/enemy/fly/dead/3.png" id="5_4epco"]
[ext_resource type="Texture2D" uid="uid://yuus7om2x33m" path="res://assets/enemy/fly/Idle/1.png" id="6_go32s"]
[ext_resource type="Texture2D" uid="uid://n105o4m88yys" path="res://assets/enemy/fly/Idle/2.png" id="7_w3u45"]
[ext_resource type="Texture2D" uid="uid://buwo648p880ex" path="res://assets/enemy/fly/Idle/3.png" id="8_ro2b8"]
[ext_resource type="Texture2D" uid="uid://diammteb7s2w3" path="res://assets/enemy/fly/Idle/4.png" id="9_f7ni5"]
[ext_resource type="Script" path="res://scenes/damage_area.gd" id="11_c182f"]
[ext_resource type="Script" path="res://scripte/attack_area.gd" id="12_8qs1o"]

[sub_resource type="Animation" id="Animation_7560b"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:speed_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AnimatedSprite2D:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("AnimatedSprite2D:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_rscsi"]
resource_name = "dead"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"dead"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.366667, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:speed_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AnimatedSprite2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("AnimatedSprite2D:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_blyha"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"idle", &"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.333333, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0, 1, 2, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:speed_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.0333333, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 1.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.0333333, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AnimatedSprite2D:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.0333333, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("AnimatedSprite2D:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.0333333, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dcxf7"]
_data = {
"RESET": SubResource("Animation_7560b"),
"dead": SubResource("Animation_rscsi"),
"idle": SubResource("Animation_blyha")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1w7n6"]
shader = ExtResource("2_xbdqg")
shader_parameter/enabled = false
shader_parameter/tint = Color(0.805539, 0.0906658, 0.113234, 1)

[sub_resource type="SpriteFrames" id="SpriteFrames_lygia"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_6ve7p")
}, {
"duration": 1.0,
"texture": ExtResource("4_y6ta0")
}, {
"duration": 1.0,
"texture": ExtResource("5_4epco")
}],
"loop": false,
"name": &"dead",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_go32s")
}, {
"duration": 1.0,
"texture": ExtResource("7_w3u45")
}, {
"duration": 1.0,
"texture": ExtResource("8_ro2b8")
}, {
"duration": 1.0,
"texture": ExtResource("9_f7ni5")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}]

[sub_resource type="Animation" id="Animation_abo1g"]
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}

[sub_resource type="Animation" id="Animation_t5vvg"]
resource_name = "hit_flash"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7026u"]
_data = {
"RESET": SubResource("Animation_abo1g"),
"hit_flash": SubResource("Animation_t5vvg")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_wc2ka"]
radius = 231.175

[sub_resource type="CircleShape2D" id="CircleShape2D_nkbdt"]
radius = 254.031

[sub_resource type="CircleShape2D" id="CircleShape2D_ojkmh"]
radius = 12.6021

[sub_resource type="Animation" id="Animation_ygoiu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DetectionArea:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-140.025, 129.228)]
}

[sub_resource type="Animation" id="Animation_er3ca"]
resource_name = "chase"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DetectionArea:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-230.305, 182.708)]
}

[sub_resource type="Animation" id="Animation_y1jk3"]
resource_name = "lost"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DetectionArea:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-140.025, 129.228)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wjrqm"]
_data = {
"RESET": SubResource("Animation_ygoiu"),
"chase": SubResource("Animation_er3ca"),
"lost": SubResource("Animation_y1jk3")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_r850h"]
radius = 23.5432

[node name="Fly_Enemy" node_paths=PackedStringArray("visibleOnScreen") instance=ExtResource("1_s8poh")]
script = ExtResource("2_4o5g4")
fly_radius_x = 100.0
fly_radius_y = 100.0
fly_rotation_speed = 2.0
fly_speed = 150.0
fly_height = 50.0
fly_range = 200.0
hit_flash_time = 0.2
chase_range = 0.0
stats_file = "res://gegner/fly.json"
visibleOnScreen = NodePath("VisibleOnScreenEnabler2D")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="1"]
libraries = {
"": SubResource("AnimationLibrary_dcxf7")
}
speed_scale = 1.5

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." index="2"]
material = SubResource("ShaderMaterial_1w7n6")
sprite_frames = SubResource("SpriteFrames_lygia")
animation = &"idle"

[node name="HitFlashPlayer" type="AnimationPlayer" parent="." index="3"]
libraries = {
"": SubResource("AnimationLibrary_7026u")
}

[node name="DamageArea" type="Area2D" parent="." index="4"]
script = ExtResource("11_c182f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea" index="0"]
position = Vector2(-352, -46)
shape = SubResource("CircleShape2D_wc2ka")

[node name="AttackArea" type="Area2D" parent="." index="5"]
collision_layer = 8
collision_mask = 121
script = ExtResource("12_8qs1o")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea" index="0"]
position = Vector2(-349, -47)
shape = SubResource("CircleShape2D_nkbdt")

[node name="DetectionArea" type="Area2D" parent="." index="6"]
position = Vector2(-307, -129)
scale = Vector2(-140.025, 129.228)
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea" index="0"]
scale = Vector2(1.93517, 1.94888)
shape = SubResource("CircleShape2D_ojkmh")

[node name="Chase" type="AnimationPlayer" parent="." index="7"]
libraries = {
"": SubResource("AnimationLibrary_wjrqm")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="8"]
position = Vector2(-351, -46)
scale = Vector2(10.1754, 9.82616)
shape = SubResource("CircleShape2D_r850h")

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="." index="9"]
position = Vector2(-332, -46.0001)
scale = Vector2(136.05, 110.35)

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="DamageArea" to="." method="_on_damage_area_body_entered"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="screen_entered" from="VisibleOnScreenEnabler2D" to="." method="_on_visible_on_screen_enabler_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenEnabler2D" to="." method="_on_visible_on_screen_enabler_2d_screen_exited"]
